// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`__getClippingRegion > should be empty when there are no path elements 1`] = `[]`;

exports[`__getClippingRegion > should delete current clipping region when restored 1`] = `
[
  {
    "props": {
      "height": 4,
      "width": 3,
      "x": 1,
      "y": 2,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "rect",
  },
]
`;

exports[`__getClippingRegion > should restore the clipping region correctly when restored 1`] = `
[
  {
    "props": {
      "height": 4,
      "width": 3,
      "x": 1,
      "y": 2,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "rect",
  },
  {
    "props": {
      "anticlockwise": false,
      "endAngle": 5,
      "radius": 3,
      "startAngle": 4,
      "x": 1,
      "y": 2,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "arc",
  },
]
`;

exports[`__getClippingRegion > should save the clipping region correctly when saved 1`] = `
[
  {
    "props": {
      "height": 4,
      "width": 3,
      "x": 1,
      "y": 2,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "rect",
  },
  {
    "props": {
      "anticlockwise": false,
      "endAngle": 5,
      "radius": 3,
      "startAngle": 4,
      "x": 1,
      "y": 2,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "arc",
  },
]
`;

exports[`__getClippingRegion > should store the clipping region 1`] = `
[
  {
    "props": {
      "height": 4,
      "width": 3,
      "x": 1,
      "y": 2,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "rect",
  },
  {
    "props": {
      "anticlockwise": false,
      "endAngle": 5,
      "radius": 3,
      "startAngle": 4,
      "x": 1,
      "y": 2,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "arc",
  },
]
`;

exports[`__getClippingRegion > shouldn't store the whole clipping region twice when clip is called twice 1`] = `
[
  {
    "props": {
      "height": 4,
      "width": 3,
      "x": 1,
      "y": 2,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "rect",
  },
  {
    "props": {
      "anticlockwise": false,
      "endAngle": 5,
      "radius": 3,
      "startAngle": 4,
      "x": 1,
      "y": 2,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "arc",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
        {
          "props": {
            "height": 4,
            "width": 3,
            "x": 1,
            "y": 2,
          },
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "rect",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 5,
            "radius": 3,
            "startAngle": 4,
            "x": 1,
            "y": 2,
          },
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "arc",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clip",
  },
  {
    "props": {
      "height": 4,
      "width": 3,
      "x": 1,
      "y": 2,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "rect",
  },
  {
    "props": {
      "anticlockwise": false,
      "endAngle": 5,
      "radius": 3,
      "startAngle": 4,
      "x": 1,
      "y": 2,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "arc",
  },
]
`;
